--- a/shiro-example-chapter2/src/test/resources/shiro-multi-realm.ini
+++ b/shiro-example-chapter2/src/test/resources/shiro-multi-realm.ini
@@ -1,6 +1,6 @@
 [main]
-#声明一个realm
+#声明多个realm
 myRealm1=com.github.zhangkaitao.shiro.chapter2.realm.MyRealm1
 myRealm2=com.github.zhangkaitao.shiro.chapter2.realm.MyRealm2
-#指定securityManager的realms实现
+#显示指定securityManager的realms实现
 securityManager.realms=$myRealm1,$myRealm2
