--- a/shiro-example-chapter5/src/test/resources/shiro-jdbc-hashedCredentialsMatcher.ini
+++ b/shiro-example-chapter5/src/test/resources/shiro-jdbc-hashedCredentialsMatcher.ini
@@ -8,7 +8,7 @@ dataSource=com.alibaba.druid.pool.DruidDataSource
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/shiro
 dataSource.username=root
-#dataSource.password=
+dataSource.password=root
 
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm.dataSource=$dataSource
