--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>shiro-example-chapter23-app2</module>
         <module>shiro-example-chapter23-nginx</module>
         <module>shiro-example-chapter24</module>
+        <module>redisdemo</module>
     </modules>
 
 
