--- a/shiro-example-chapter5/pom.xml
+++ b/shiro-example-chapter5/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>ehcache-core</artifactId>
             <version>2.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>1.2.2</version>
+        </dependency>
 
 
     </dependencies>
